ejemplo3/InterfacesParser.py
# Generated from Interfaces.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class InterfacesParser ( Parser ):

    grammarFileName = "Interfaces.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'iface'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "DIRECTIVE", 
                      "FAMILY", "METHOD", "ID", "IP", "NEWLINE", "WS" ]

    RULE_file_ = 0
    RULE_auto = 1
    RULE_iface = 2
    RULE_config = 3

    ruleNames =  [ "file_", "auto", "iface", "config" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    DIRECTIVE=3
    FAMILY=4
    METHOD=5
    ID=6
    IP=7
    NEWLINE=8
    WS=9

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class File_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(InterfacesParser.EOF, 0)

        def auto(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterfacesParser.AutoContext)
            else:
                return self.getTypedRuleContext(InterfacesParser.AutoContext,i)


        def iface(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterfacesParser.IfaceContext)
            else:
                return self.getTypedRuleContext(InterfacesParser.IfaceContext,i)


        def getRuleIndex(self):
            return InterfacesParser.RULE_file_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_" ):
                listener.enterFile_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_" ):
                listener.exitFile_(self)




    def file_(self):

        localctx = InterfacesParser.File_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 8
                    self.auto()
                    pass
                elif token in [2]:
                    self.state = 9
                    self.iface()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 12 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1 or _la==2):
                    break

            self.state = 14
            self.match(InterfacesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AutoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(InterfacesParser.ID, 0)

        def NEWLINE(self):
            return self.getToken(InterfacesParser.NEWLINE, 0)

        def getRuleIndex(self):
            return InterfacesParser.RULE_auto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAuto" ):
                listener.enterAuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAuto" ):
                listener.exitAuto(self)




    def auto(self):

        localctx = InterfacesParser.AutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_auto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(InterfacesParser.T__0)
            self.state = 17
            self.match(InterfacesParser.ID)
            self.state = 18
            self.match(InterfacesParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfaceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(InterfacesParser.ID, 0)

        def FAMILY(self):
            return self.getToken(InterfacesParser.FAMILY, 0)

        def METHOD(self):
            return self.getToken(InterfacesParser.METHOD, 0)

        def NEWLINE(self):
            return self.getToken(InterfacesParser.NEWLINE, 0)

        def config(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterfacesParser.ConfigContext)
            else:
                return self.getTypedRuleContext(InterfacesParser.ConfigContext,i)


        def getRuleIndex(self):
            return InterfacesParser.RULE_iface

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIface" ):
                listener.enterIface(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIface" ):
                listener.exitIface(self)




    def iface(self):

        localctx = InterfacesParser.IfaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_iface)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(InterfacesParser.T__1)
            self.state = 21
            self.match(InterfacesParser.ID)
            self.state = 22
            self.match(InterfacesParser.FAMILY)
            self.state = 23
            self.match(InterfacesParser.METHOD)
            self.state = 24
            self.match(InterfacesParser.NEWLINE)
            self.state = 26 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 25
                self.config()
                self.state = 28 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==3):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIRECTIVE(self):
            return self.getToken(InterfacesParser.DIRECTIVE, 0)

        def IP(self):
            return self.getToken(InterfacesParser.IP, 0)

        def NEWLINE(self):
            return self.getToken(InterfacesParser.NEWLINE, 0)

        def getRuleIndex(self):
            return InterfacesParser.RULE_config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig" ):
                listener.enterConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig" ):
                listener.exitConfig(self)




    def config(self):

        localctx = InterfacesParser.ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_config)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(InterfacesParser.DIRECTIVE)
            self.state = 31
            self.match(InterfacesParser.IP)
            self.state = 32
            self.match(InterfacesParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





